# flakes

./: .gitignore  README.md  flake.nix  init.sh
templates/minimal/: flake.nix
templates/ocaml/: flake.nix
templates/ocaml/templated/: dune-project  templated.opam
templates/ocaml/templated/lib/: dune
templates/ocaml/templated/src/: dune  main.ml
templates/ocaml/templated/test/: Test.ml  dune
templates/ocaml/templated_app/: .env  .gitignore  .ocamlformat  dune-project
templates/ocaml/templated_app/lib/: TemplatedApp.ml  dune
templates/ocaml/templated_app/src/: dune  main.ml
templates/ocaml/templated_app/test/: Test.ml  dune
templates/rust/: .envrc  .gitignore  Cargo.toml  flake.nix
